fixed overflow side scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
     color: #96D7C8;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 .header {
     width: 45%;
     margin-top: 8%;
